# namecheap-python

./: CHANGELOG.md  pyproject.toml
src/namecheap/: models.py
src/namecheap/_api/: dns.py  domains.py
src/namecheap_cli/: __init__.py  __main__.py
src/namecheap_dns_tui/: __init__.py
tests/: README.md  conftest.py
tests/e2e/: test_dns_e2e.py
tests/fixtures/: conftest.py  dns.py
tests/integration/: test_dns_integration.py  test_domains_integration.py
tests/unit/: test_dns_builder.py  test_dns_models.py  test_domains.py
tests/utils/: test_helpers.py
