[project]
name = "namecheap-python"
version = "1.0.4"
description = "A friendly Python SDK for Namecheap API"
authors = [{name = "Adrian Galilea Delgado", email = "adriangalilea@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["namecheap", "domains", "dns", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "xmltodict>=0.13.0",
    "tldextract>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/adriangalilea/namecheap-python"
Repository = "https://github.com/adriangalilea/namecheap-python"
Issues = "https://github.com/adriangalilea/namecheap-python/issues"

[project.optional-dependencies]
cli = [
    "click>=8.1.0",
    "PyYAML>=6.0.0",
    "platformdirs>=4.0.0",
]
tui = [
    "textual>=0.47.0",
]
all = [
    "click>=8.1.0",
    "PyYAML>=6.0.0",
    "platformdirs>=4.0.0",
    "textual>=0.47.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "pytest-mock>=3.11.1",
    "hypothesis>=6.82.0",
    "faker>=19.6.0",
]

[project.scripts]
namecheap-cli = "namecheap_cli:main"
namecheap-dns-tui = "namecheap_dns_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/namecheap", "src/namecheap_cli", "src/namecheap_dns_tui"]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "S",
    "C4",
    "RET",
    "SIM",
]
extend-ignore = ["E501"]
ignore = [
    "S101",
    "SIM110",
    "SIM118",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=src/namecheap
    --cov=src/namecheap_cli
    --cov=src/namecheap_dns_tui
    --cov-report=term-missing:skip-covered
    --cov-report=html:htmlcov
    --cov-report=xml
    --cov-fail-under=15
    -n auto
    --timeout=300
"""
markers = [
    "unit: unit tests (fast)",
    "integration: integration tests (medium)",
    "e2e: end-to-end tests (slow, requires credentials)",
    "slow: slow tests",
    "requires_credentials: tests requiring Namecheap credentials",
]

[tool.coverage.run]
source = ["src/namecheap", "src/namecheap_cli", "src/namecheap_dns_tui"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
